--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,5 @@ OPEN_LIBRARY_API_BASE=https://openlibrary.org
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# CORS
+# CORS (comma-separated list for multiple origins)
 CORS_ORIGIN=http://localhost:3000
