--- a/package.json
+++ b/package.json
@@ -8,24 +8,27 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "db:migrate": "node src/database/migrate.js",
+    "db:migrate:undo": "node src/database/migrate.js --undo",
+    "db:migrate:status": "node src/database/migrate.js --status",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["book", "tracking", "reading", "api"],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "axios": "^1.6.2",
+    "umzug": "3.8.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
