refactor: remove reading goals feature and update related configurations, improve CORS and rate limiting settings, and enhance book retrieval logic

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,27 @@
-# Server Configuration
-PORT=3000
 NODE_ENV=development
+PORT=3000
 
-# Database Configuration
+# Database
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=shlf_db
 DB_USER=postgres
-DB_PASSWORD=your_password_here
+DB_PASSWORD=your_password
 
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+# Auth
+JWT_SECRET=change_me_to_a_strong_secret
 JWT_EXPIRES_IN=7d
 
-# Open Library API
+# External APIs
 OPEN_LIBRARY_API_BASE=https://openlibrary.org
+OPEN_LIBRARY_TIMEOUT_MS=5000
 
-# Rate Limiting
+# CORS (only applies to browser clients; native iOS/Android are unaffected)
+# Use * for mobile-only; set to web origins if you add a browser frontend
+CORS_ORIGINS=*
+CORS_ALLOW_CREDENTIALS=true
+
+# Rate limiting
+RATE_LIMIT_ENABLED=true
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
-
-# CORS (comma-separated list for multiple origins)
-CORS_ORIGIN=http://localhost:3000
